--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,19 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
-org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048M
 
-
-# Fabric Properties
-# check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.16.5
-mod_menu_version=7.2.2
+enabled_platforms=fabric,forge
 
-# Mod Properties
-mod_version=1.0+fabric-1.20.1
-maven_group=com.starfish_studios
 archives_base_name=infinite_pie
+mod_version=1.0.0
+maven_group=com.starfish_studios.infinite_pie
 
-# Dependencies
+architectury_version=9.1.12
 
-fabric_version=0.90.4+1.20.1
-fabric_registrate_version = 1.3.62-MC1.20.1
+fabric_loader_version=0.14.23
+fabric_api_version=0.90.4+1.20.1
+midnightlib_version_fabric=1.4.1-fabric
+midnightlib_version_forge=1.4.2-forge
+forge_version=1.20.1-47.2.1
 
-midnightlib_version = 1.4.1-fabric
+
+
