--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,20 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.20.1
-enabled_platforms=fabric,forge
+minecraft_version=1.21.1
+enabled_platforms=fabric,neoforge
 
 archives_base_name=infinite_pie
 mod_version=1.0.0
 maven_group=com.starfish_studios.infinite_pie
 
-architectury_version=9.1.12
+architectury_api_version = 13.0.8
+fabric_loader_version = 0.16.10
+fabric_api_version = 0.115.1+1.21.1
+neoforge_version = 21.1.84
 
-fabric_loader_version=0.14.23
-fabric_api_version=0.90.4+1.20.1
-midnightlib_version_fabric=1.4.1-fabric
-midnightlib_version_forge=1.4.2-forge
-forge_version=1.20.1-47.2.1
+midnightlib_version_fabric=1.6.9+1.21-fabric
+midnightlib_version_forge=1.6.9+1.21-neoforge
+
 
 
 
