--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,9 +55,11 @@ shadowJar {
 }
 
 remapJar {
-    input.set shadowJar.archiveFile
+    archiveFileName.set("${rootProject.archives_base_name}-1.0.0+forge-1.20.1.jar")
+    input.set(shadowJar.archiveFile)
     dependsOn shadowJar
 }
+
 
 sourcesJar {
     def commonSources = project(":common").sourcesJar
