--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -48,7 +48,7 @@ shadowJar {
 
 remapJar {
     injectAccessWidener = true
-    archiveFileName.set("${rootProject.archives_base_name}-1.0.0+fabric-1.20.1.jar")
+    archiveFileName.set("${rootProject.archives_base_name}-${rootProject.mod_version}+fabric-${rootProject.minecraft_version}.jar")
     input.set(shadowJar.archiveFile)
     dependsOn shadowJar
 }
