--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,7 +55,7 @@ shadowJar {
 }
 
 remapJar {
-    archiveFileName.set("${rootProject.archives_base_name}-1.0.0+forge-1.20.1.jar")
+    archiveFileName.set("${rootProject.archives_base_name}-${rootProject.mod_version}+forge-${rootProject.minecraft_version}.jar")
     input.set(shadowJar.archiveFile)
     dependsOn shadowJar
 }
