--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -51,5 +51,6 @@ shadowJar {
 }
 
 remapJar {
+    archiveFileName.set("${rootProject.archives_base_name}-${rootProject.mod_version}+fabric-${rootProject.minecraft_version}.jar")
     inputFile.set shadowJar.archiveFile
 }
